--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "time-2-create",
-    "description": "This project is really great.",
+    "description": "iOS/Android app to help people find breaking spots all over the world.",
     "slug": "time-2-create",
     "privacy": "public",
     "sdkVersion": "27.0.0",
@@ -22,6 +22,13 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyD51bf6nn2KyU43etyAYxmIJbNpO5IGrrs"
+        }
+      }
     }
   }
 }
